--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
- {
+{
+  "rewrites": [
+    {
+      "source": "/api/spotify",
+      "destination": "/api"
+    }
+  ],
   "redirects": [
     {
       "source": "/",
